--- a/spring-boot-jms-receiver/src/main/resources/application.properties
+++ b/spring-boot-jms-receiver/src/main/resources/application.properties
@@ -3,40 +3,14 @@
 #
 #server configuration
 server.address=0.0.0.0
-server.port=8090
-
-cxf.path=/rest
+server.port=8095
 amqphub.amqp10jms.remote-ur=tcp://127.0.0.1:61616
-
-#kie server config
-kieserver.serverId=business-application-service
-kieserver.serverName=business-application-service
-kieserver.location=http://localhost:8090/rest/server
-#kieserver.controllers=
-
-
-#kie server capabilities
-kieserver.drools.enabled=true
-kieserver.dmn.enabled=true
-kieserver.jbpm.enabled=true
-kieserver.jbpmui.enabled=true
-kieserver.casemgmt.enabled=true
-#kieserver.prometheus.enabled=true
-
-
-
-#jbpm configuration
-jbpm.executor.enabled=false
-#jbpm.executor.retries=5
-#jbpm.executor.interval=3
-#jbpm.executor.threadPoolSize=1
-#jbpm.executor.timeUnit=SECONDS
 
 
 #data source configuration
 spring.datasource.username=sa
 spring.datasource.password=sa
-spring.datasource.url=jdbc:h2:mem:kieserver
+spring.datasource.url=jdbc:h2:mem:auditreplica
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 
