--- a/kjar/pom.xml
+++ b/kjar/pom.xml
@@ -13,7 +13,7 @@
   <name>sample-kjar</name>
 
   <properties>
-    <version.org.kie>7.33.0.Final</version.org.kie>
+    <version.org.kie>7.33.0.Final-redhat-00002</version.org.kie>
     <maven.compiler.target>1.8</maven.compiler.target>
     <maven.compiler.source>1.8</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
