proxying history requests

--- a/spring-boot-kie-server/src/main/resources/application.properties
+++ b/spring-boot-kie-server/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.address=0.0.0.0
 server.port=8090
 
 cxf.path=/rest
+cxf.jaxrs.classes-scan=true
+cxf.jaxrs.classes-scan-packages=com.company.service
 amqphub.amqp10jms.remote-ur=tcp://127.0.0.1:61616
 
 #kie server config
@@ -21,6 +23,7 @@ kieserver.dmn.enabled=true
 kieserver.jbpm.enabled=true
 kieserver.jbpmui.enabled=true
 kieserver.casemgmt.enabled=true
+kieserver.history.url=http://localhost:8095
 #kieserver.prometheus.enabled=true
 
 
