in-vm audit data replication

--- a/spring-boot-kie-server/src/main/resources/application.properties
+++ b/spring-boot-kie-server/src/main/resources/application.properties
@@ -8,7 +8,8 @@ server.port=8090
 cxf.path=/rest
 cxf.jaxrs.classes-scan=true
 cxf.jaxrs.classes-scan-packages=com.company.service
-amqphub.amqp10jms.remote-ur=tcp://127.0.0.1:61616
+activemq.broker-url=vm://audit-broker?broker.persistent=false
+
 
 #kie server config
 kieserver.serverId=business-application-service
@@ -42,6 +43,12 @@ spring.datasource.password=sa
 spring.datasource.url=jdbc:h2:mem:kieserver
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
+
+spring.audit-datasource.jdbcUrl = jdbc:h2:mem:audit-jbpm
+spring.audit-datasource.username = sa
+spring.audit-datasource.password = sa
+
+
 
 #hibernate configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
