--- a/spring-boot-kie-server/src/main/resources/application-local.properties
+++ b/spring-boot-kie-server/src/main/resources/application-local.properties
@@ -4,11 +4,16 @@
 #server configuration
 server.address=0.0.0.0
 server.port=8090
-
 cxf.path=/rest
 cxf.jaxrs.classes-scan=true
 cxf.jaxrs.classes-scan-packages=com.company.service
-activemq.broker-url=vm://audit-broker?broker.persistent=false
+amqphub.amqp10jms.remote-url=amqp://localhost:61616
+amqphub.amqp10jms.username=guest
+amqphub.amqp10jms.password=guest
+amq.broker.password=guest
+amq.broker.user=guest
+amq.broker.role=guest
+audit.queue=audit-queue
 
 
 #kie server config
