--- a/spring-boot-kie-server/src/main/resources/application-local.properties
+++ b/spring-boot-kie-server/src/main/resources/application-local.properties
@@ -6,7 +6,7 @@ server.address=0.0.0.0
 server.port=8090
 cxf.path=/rest
 cxf.jaxrs.classes-scan=true
-cxf.jaxrs.classes-scan-packages=com.company.service
+cxf.jaxrs.classes-scan-packages=com.company.history.rest,org.jbpm.kie.services.impl.model,com.fasterxml,org.kie.server.api.model
 amqphub.amqp10jms.remote-url=amqp://localhost:61616
 amqphub.amqp10jms.username=guest
 amqphub.amqp10jms.password=guest
@@ -14,7 +14,9 @@ amq.broker.password=guest
 amq.broker.user=guest
 amq.broker.role=guest
 audit.queue=audit-queue
-
+logging.level.org.apache.activemq.audit=WARN
+logging.level.org.apache.activemq.artemis.core.server=ERROR
+logging.level.org.apache.qpid.jms=WARN
 
 #kie server config
 kieserver.serverId=business-application-service
