--- a/spring-boot-kie-server/pom.xml
+++ b/spring-boot-kie-server/pom.xml
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-rs-service-description-swagger</artifactId>
-			<version>3.1.11</version>
+			<version>3.2.6</version>
 		</dependency>
 		<dependency>
 			<groupId>io.swagger</groupId>
@@ -49,6 +49,12 @@
 			</exclusions>
 		</dependency>
 
+<!-- https://mvnrepository.com/artifact/org.webjars/swagger-ui -->
+<dependency>
+    <groupId>org.webjars</groupId>
+    <artifactId>swagger-ui</artifactId>
+    <version>3.25.0</version>
+</dependency>
 
 		<dependency>
 			<groupId>org.kie</groupId>
