--- a/spring-boot-kie-server/src/main/resources/application-local.properties
+++ b/spring-boot-kie-server/src/main/resources/application-local.properties
@@ -31,6 +31,7 @@ kieserver.dmn.enabled=true
 kieserver.jbpm.enabled=true
 kieserver.jbpmui.enabled=true
 kieserver.casemgmt.enabled=true
+kieserver.swagger.enabled=true
 #kieserver.prometheus.enabled=true
 
 
